# vsc-python-settings

./: .mypy.ini  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/testapp/: auxiliary.py  example.py
