[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python_settings"
version = "0.0.1"
description = "A sample package with the mininal dependencies for proper Python formatting, linting & type checking."
authors = ["Gerard Castro <gerard.castro@nebbo-weather.com>"]
readme = "README.md"
homepage = "https://www.nebbo-weather.com/"
repository = "https://github.com/nebbo-weather/vsc-python-settings"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
]
packages = [
    {include = "src/testapp", from = "."},
]

[tool.poetry.dependencies]
python = "^3.11"

# Main imports

# # Third party libraries
pandas = "^2.2.2"
xarray = "^2024.7.0"
tqdm = "^4.66.5"
scipy = "^1.14.1"
xskillscore = "^0.0.26"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

# Dependencies just for the DevContainer

# # Formatting, linting and type checking
ruff = "^0.6.4"
mypy = "^1.11.2"

# # Third party libraries' stubs
pandas-stubs = "^2.2.2.240909"
types-tqdm = "^4.66.0.20240417"
scipy-stubs = "^1.4.1a3"